--- a/extracredit notebook.ipynb
+++ b/extracredit notebook.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11097/4239921246.py:3: DtypeWarning: Columns (46,149,155,170) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1658/4239921246.py:3: DtypeWarning: Columns (46,149,155,170) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('sample_dataframe.csv')\n"
      ]
     },
@@ -370,7 +370,7 @@
        "[10000 rows x 178 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,38 +1150,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It seems that the information about the product is spread out over multiple columns. Lets combine them into one column\n",
+    "# Then separate them using the \"~\" character instead of the original separator for the file \";\"\n",
+    "\n",
+    "# First lets concatenate the columns DNOMBRE, DMARCA, DVARIEDAD, DOTRO1 and DOTRO2 into one column\n",
+    "\n",
+    "df['PRODUCTO'] = df['DNOMBRE'].astype(str) + df['DMARCA'].astype(str) + df['DVARIEDAD'].astype(str) + df['DOTRO1'].astype(str) + df['DOTRO2'].astype(str)\n",
+    "\n",
+    "# Now lets split the columns using the \"~\" character to see how many columns we need\n",
+    "\n",
+    "df['PRODUCTO'].str.split('~', expand=True)\n",
+    "\n",
+    "# We need 12 columns, so lets create 12 new columns with the prefix \"product_\" and the number of the column\n",
+    "\n",
+    "df[['product_1','product_2','product_3','product_4','product_5','product_6','product_7','product_8','product_9','product_10','product_11', 'product_12']] = df['PRODUCTO'].str.split('~', expand=True)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' STATION WAGON' ' PUNTO DE ACCESO' ' CABLE DE COBRE' ...\n",
+      " ' SEPARADOR DE ACEITE' ' ROTULA DE CILINDRO' ' GELATINAS ORGANICAS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.product_2.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Good thing that ARANC-ALA contains the product codes. Lets display them in plain text instead of scientific notation\n",
+    "\n",
+    "df['ARANC-ALA'] = df['ARANC-ALA'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  8,   3,   9,   1,  28,  13,   2,  45,  10, 142, 115,  14,   4,\n",
-       "        27,  12,   7,  26,  20,  43, 146,  15,   5,  16, 179,  33,  17,\n",
-       "        29,  34,   6,  32,  92,  23,  18, 292,  85,  24,  19,  37,  21,\n",
-       "        62,  22,  48,  73, 129,  11,  39,  46,  31, 120,  38, 353, 131,\n",
-       "        69,  78,  44,  54,  51,  97,  80,  41,  30,  25,  52,  91, 134,\n",
-       "       102,  65,  59,  63,  74, 187, 109,  49,  56, 184,  57,  60,  77,\n",
-       "        40, 247,  55, 123, 164,  98,  83,  35, 152,  47,  87, 227, 119,\n",
-       "       105, 228, 135, 100,  58,  81, 215, 106,  96,  95,  84, 156,  64,\n",
-       "        42,  75, 127,  36,  53,  70,  50, 117, 128,  67, 205, 346, 125,\n",
-       "       159,  90,  71, 111,  66, 204,  99,  89, 140,  68, 195, 116,  93,\n",
-       "        61,  76, 209, 166, 423, 180, 103,  88,  72, 189, 214, 150, 169,\n",
-       "       158, 425,  94, 200, 113, 245,  79, 130, 188, 139, 202, 126, 121,\n",
-       "       107, 193, 177, 171, 110, 235, 460, 114, 124,  82, 151, 508,  86,\n",
-       "       160, 230, 387, 310, 389, 196, 101, 185, 173, 364, 234, 163, 427,\n",
-       "       213, 183, 162, 416, 420, 190, 108, 229, 144, 259, 443, 456, 277,\n",
-       "       471, 400, 457, 136, 360, 191, 199, 268, 246, 137, 168, 253, 203])"
+       "0       8703\n",
+       "1        0.0\n",
+       "2       8544\n",
+       "3       8708\n",
+       "4       8536\n",
+       "        ... \n",
+       "9995    8418\n",
+       "9996    8506\n",
+       "9997     0.0\n",
+       "9998     0.0\n",
+       "9999    2942\n",
+       "Name: ARANC-ALA, Length: 10000, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# It seems that the information about the product is spread out over multiple columns. Lets combine them into one column\n",
-    "# Then separate them using the \"~\" character instead of the original separator for the file \";\"\n"
+    "df['ARANC-ALA'].str[:4]"
    ]
   },
   {
