--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -125,20 +125,19 @@
     "\n",
     "# Basic Neural Network: Perceptron Explanation\n",
     "\n",
-    "A **perceptron** is the most basic form of a neural network. It consists of one layer of inputs and one layer of outputs. Let's break down the components and the operation of this network step by step, exemplifying with :\n",
+    "A **perceptron** is the most basic form of a neural network. It consists of one layer of inputs (independent variables or features) and one layer of outputs (dependent variables). Let's break down the components and the operation of this network step by step, exemplifying with :\n",
     "\n",
     "## Layers and Vectors\n",
     "\n",
-    "1. **Layers**: In a perceptron, layers are visualized as a series of nodes aligned vertically.\n",
-    "   - An **input layer** is represented by a vector for one observation. For example, vector `x` is `[x1 x2]ᵀ`.\n",
-    "   - With multiple observations, each layer is represented as a matrix.\n",
+    "1. **Layers**: In a perceptron, layers are visualized as a series of nodes (each node corresponding to a variable) aligned vertically.\n",
+    "   - An **input layer** is represented by a vector for one observation. For example, vector `x` is `[x1 x2 ... xn]ᵀ` for \"n\" features.\n",
+    "   - With k observations and n features, a layer is represented as a matrix `n × k` .\n",
     "\n",
-    "2. **Input Layer (X)**: For a perceptron with two inputs and `p` observations, the input layer is a `2 × p` matrix, denoted as `X`.\n",
+    "2. **Input Layer (X)**: For a perceptron with two features and `k` observations, the input layer is a `2 × k` matrix (matrix `X`). We are going to model the \"mini MNIST\" data, which will have (28 x 28) input features and 1.000 observations, so the input layer matrix has a 784 x 1.000 shape.\n",
     "\n",
     "3. **Output Layer (Y)**: \n",
-    "   - The output is represented by the variable `y`.\n",
-    "   - The output matrix `Y` is typically `n × p` but, in this basic case, it simplifies to `1 × p`.\n",
-    "   - `Y` is the predicted output by the network, different from `T`, which is the known output in supervised learning.\n",
+    "   - The output layer (matrix `Y`) is typically `n × p` in this case we will model each possible digit as a binary variable, so it will have 10 x 1.000 shape.\n",
+    "   - `Y` is the predicted output by the network, different from `T` (label matrix), which is the known output in supervised learning.\n",
     "\n",
     "## Goal of the Neural Network\n",
     "\n",
@@ -148,7 +147,7 @@
     "## Weight Matrix (W)\n",
     "\n",
     "- To map from `X` to `Y`, we introduce a weight matrix `W`.\n",
-    "- In general, `W` is an `n × m` matrix, where `m` is the number of input nodes, independent of the number of observations.\n",
+    "- In general, `W` is an `n × m` matrix, where `m` is the number of input nodes, independent of the number of observations. In this case we have 784 input features and 10 output features, so it has a 10 x 784 shape.\n",
     "- The fundamental equation of the network is: `T = W * X + b`, where `b` is a bias vector.\n",
     "\n",
     "## Linearization\n",
@@ -176,8 +175,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will be working with a subset of the MNIST dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,34 +197,120 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X shape: (4, 5)\n",
-      "T shape: (1, 5)\n",
-      "X: [[-0.82564301  0.78477748  0.31311514 -1.0836756  -2.19473362]\n",
-      " [ 0.71074089 -0.76406765  0.32480617  1.88997109  1.19662102]\n",
-      " [ 1.40289635  0.85435855  0.64118954 -0.08368818 -0.92360596]\n",
-      " [-0.43496685 -1.83350986  0.0928096  -1.55390604 -0.69541564]]\n",
-      "T: [[-0.31068405 -1.01206771  0.72946336  0.8478648  -0.3655965 ]]\n",
-      "W_hat shape: (1, 4)\n",
-      "W_hat: [[ 0.84864578  1.22048007 -0.20432708  0.32805125]]\n",
-      "New X shape: (4, 5)\n",
-      "New X: [[-0.62371697  0.02019627 -0.26861686 -0.38929488  1.33407436]\n",
-      " [ 1.29733104  0.29565742  0.25977682 -0.95211057  0.66521986]\n",
-      " [-0.01698883 -1.25691953 -0.97536636  0.26575612 -0.84163206]\n",
-      " [-0.78828163  0.39129256 -0.03291746  0.02240144 -0.40793631]]\n",
-      "Predictions: [[ 0.7989264   0.76317017  0.27758701 -1.53935778  1.98218836]]\n"
+      "Original image shape: (28, 28)\n",
+      "Flattened image shape:  (784,)\n",
+      "X shape: (784, 1000)\n",
+      "T shape: (10, 1000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Original image shape:\",images[0].shape) # (28, 28)\n",
+    "\n",
+    "# Given we are working with a simple perceptron, we must flatten each image into a vector of length 784.\n",
+    "\n",
+    "# Example:\n",
+    "\n",
+    "print(\"Flattened image shape: \",images[0].flatten().shape)\n",
+    "\n",
+    "# Now we can create a single matrix of all the images, where each row is an image vector.\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "X = np.array([image.flatten() for image in images])\n",
+    "X = X.T # transpose so that each column is an image vector\n",
+    "print(\"X shape:\",X.shape) # (784,1000)\n",
+    "\n",
+    "# We also need to convert the labels so that they are one-hot encoded.\n",
+    "# Given that each label is an integer between 0 and 9, we can create a 10-dimensional vector for each label.\n",
+    "# The vector will have a 1 in the position of the label and 0s everywhere else.\n",
+    "\n",
+    "T = np.zeros((len(labels), 10))\n",
+    "for i, label in enumerate(labels):\n",
+    "    T[i, label] = 1\n",
+    "T = T.T # transpose so that each column is a label vector\n",
+    "print(\"T shape:\",T.shape) # (10,1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (1000, 784)\n",
+      "T shape: (10, 1000)\n",
+      "X: [[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n",
+      "T: [[1. 1. 1. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 1. 1. 1.]]\n",
+      "W_hat shape: (10, 784)\n",
+      "W_hat: [[ 2.11237658e+09 -1.04955834e+11 -5.13363801e+10 ...  3.85621959e+10\n",
+      "  -5.46846281e+10  9.56947394e+09]\n",
+      " [-3.30079618e+10  1.10669870e+10 -2.14677754e+10 ...  2.03558402e+10\n",
+      "   3.91054613e+10  2.90604952e+10]\n",
+      " [ 3.11741740e+10 -4.23477634e+10  7.80977818e+08 ... -1.43691528e+10\n",
+      "  -4.59679423e+10  5.12355510e+10]\n",
+      " ...\n",
+      " [ 6.33463940e+10 -1.11043005e+10 -2.16872418e+10 ...  5.43620773e+10\n",
+      "   6.17301138e+10  6.56674428e+10]\n",
+      " [ 8.62112372e+10 -1.36373543e+10  6.63989055e+09 ...  4.41542226e+10\n",
+      "   7.58351793e+10  1.72868239e+10]\n",
+      " [-1.63810193e+11  2.17931590e+10  3.70171170e+10 ... -9.68784683e+10\n",
+      "  -1.22973266e+11 -8.70428261e+10]]\n",
+      "New X shape: (784, 1000)\n",
+      "New X: [[-1.04644165  0.17006635 -0.63005947 ...  0.67462301  0.80101034\n",
+      "  -0.50457856]\n",
+      " [ 0.56490669  0.73194209  0.03372531 ... -0.70613006  0.64201168\n",
+      "   0.6672048 ]\n",
+      " [-0.61496876  0.21970827  0.09071214 ... -0.01115468  0.12773824\n",
+      "  -0.1279802 ]\n",
+      " ...\n",
+      " [ 1.09910928  0.88809108 -0.49811356 ...  0.61048987  1.27203942\n",
+      "  -0.22901043]\n",
+      " [-0.33379694 -0.03252611  0.63741908 ... -1.61097658 -0.39490506\n",
+      "   0.37866906]\n",
+      " [ 0.07536334 -0.20508583  0.51657924 ... -2.18079835  0.11410507\n",
+      "   0.01825243]]\n",
+      "Predictions: [[ 3.76141504e+11 -7.39334640e+11 -2.90371566e+11 ... -5.32070405e+11\n",
+      "   3.13599903e+10 -7.49112010e+11]\n",
+      " [-3.80369456e+11 -9.73817564e+11  3.77048770e+11 ...  7.98050452e+11\n",
+      "  -2.16059883e+11 -4.88507035e+10]\n",
+      " [ 2.94489090e+11  9.79390102e+11 -4.94020292e+11 ... -1.29645298e+11\n",
+      "  -3.73508425e+11 -2.27018434e+11]\n",
+      " ...\n",
+      " [-9.64966435e+10  4.82917537e+10 -1.07063861e+12 ...  1.02258155e+12\n",
+      "   7.33633276e+10  5.15703793e+11]\n",
+      " [-2.05638086e+11  2.52900465e+11  8.98115787e+11 ... -1.34172913e+12\n",
+      "   2.31240421e+12 -7.12401340e+10]\n",
+      " [ 1.17379707e+12 -1.77677555e+11  1.42158079e+12 ... -1.24990223e+12\n",
+      "  -1.00775601e+12 -3.08027266e+11]]\n"
      ]
     }
    ],
@@ -263,15 +355,15 @@
     "    return np.dot(W, X)\n",
     "\n",
     "# Example usage\n",
-    "n_inputs = 4  # Number of input nodes\n",
-    "n_outputs = 1 # Number of output nodes\n",
-    "p = 5         # Number of observations\n",
+    "n_inputs = 784  # Number of input nodes\n",
+    "n_outputs = 10 # Number of output nodes\n",
+    "p = 1000         # Number of observations\n",
     "\n",
     "# Random example data\n",
-    "X = np.random.randn(n_inputs, p)  # Input data\n",
-    "T = np.random.randn(n_outputs, p) # Target output\n",
+    "#X = np.random.randn(n_inputs, p)  # Input data\n",
+    "#T = np.random.randn(n_outputs, p) # Target output\n",
     "\n",
-    "print(\"X shape:\", X.shape)\n",
+    "print(\"X shape:\", X.T.shape)\n",
     "print(\"T shape:\", T.shape)\n",
     "print(\"X:\", X)\n",
     "print(\"T:\", T)\n",
