WIP on main: 1e2b5a0 neural network

--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -3,71 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Understand the Basics\n",
-    "\n",
-    "## Neural Network Architecture: \n",
-    "Understand the basic components, such as input layer, hidden layers, output layer, neurons, weights, and biases.\n",
-    "## Activation Functions: \n",
-    "Learn about functions like Sigmoid, ReLU, and Softmax.\n",
-    "## Loss Functions: \n",
-    "Understand concepts of loss functions like Mean Squared Error (MSE) or Cross-Entropy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conceptual Outline of a Neural Network Project\n",
-    "\n",
-    "## Introduction\n",
-    "- **Objective**: Design and implement a neural network using only NumPy, focusing on the fundamental principles of machine learning and linear algebra.\n",
-    "\n",
-    "## 1. Neural Network Architecture\n",
-    "- **Linear Algebra Perspective**: View neurons and layers as vectors and matrices.\n",
-    "- **Layers**: Input, hidden, and output layers, each represented by matrices of weights and bias vectors.\n",
-    "- **Neurons**: Units of computation, aggregating input through matrix operations.\n",
-    "\n",
-    "## 2. Mathematical Foundations\n",
-    "- **Matrix Operations**: Emphasize the use of matrix multiplication, addition, and transpose operations in the network's computations.\n",
-    "- **Activation Functions**: Conceptualize as vectorized non-linear transformations (e.g., Sigmoid or ReLU applied element-wise).\n",
-    "\n",
-    "## 3. Forward Propagation\n",
-    "- **Linear Transformation**: `Z = W*X + b`, where `W` and `X` are matrices, and `b` is a bias vector.\n",
-    "- **Activation**: Apply an activation function on `Z` to introduce non-linearity.\n",
-    "\n",
-    "## 4. Loss Function\n",
-    "- **Theory**: Understand the purpose of a loss function in quantifying prediction error.\n",
-    "- **Implementation**: Use a function like MSE or Cross-Entropy, represented in a linear algebra framework.\n",
-    "\n",
-    "## 5. Backward Propagation\n",
-    "- **Gradient Computation**: Utilize the chain rule in a matrix calculus context to compute gradients of the loss with respect to weights and biases.\n",
-    "- **Backpropagation Algorithm**: Conceptually, this is the reverse of forward propagation, applying the chain rule through layers.\n",
-    "\n",
-    "## 6. Parameter Update\n",
-    "- **Gradient Descent**: Update the weights and biases by moving in the direction opposite to the gradient.\n",
-    "- **Learning Rate**: Control the step size in the gradient descent.\n",
-    "\n",
-    "## 7. Model Integration and Training\n",
-    "- **Epochs**: Iterate over the dataset multiple times.\n",
-    "- **Batch Processing**: Optionally introduce the concept of mini-batch gradient descent.\n",
-    "\n",
-    "## 8. Evaluation and Prediction\n",
-    "- **Predictive Function**: Apply the trained model to new data.\n",
-    "- **Performance Metrics**: Evaluate accuracy, precision, recall, etc.\n",
-    "\n",
-    "## 9. Experimental Setup\n",
-    "- **Dataset**: Choose an appropriate dataset for testing.\n",
-    "- **Training/Testing Split**: Emphasize the importance of unbiased model evaluation.\n",
-    "\n",
-    "## 10. Advanced Topics (Optional)\n",
-    "- **Regularization**: Techniques like L1, L2 regularization to prevent overfitting.\n",
-    "- **Optimization Algorithms**: Beyond basic gradient descent, explore algorithms like Adam, RMSprop.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
@@ -534,22 +469,38 @@
     "Now for estimating our weight matrix W, we won't estimate it directly from X. Instead we are going to iterate over itself and so we will optimize W in a way. The first version of W will be initialized randomly, and over each iteration we will be *nudging* it, instead of starting from scratch each time.\n",
     "\n",
     "## Transformation in the Hidden Layer\n",
-    "- Let's define \"P\" as `P = W X`, so kind of how we defined \"T\" for our perceptron.\n",
-    "- Additionally, we will apply a component-wise function \"sigma\" to `P` to get `S`, so $P=WX$ and $S = sigma(P)$ \n",
-    "- We will call this \"sigma\" function an \"activation function\". This will helps us to model complex non-linear relationships and interaction effects.\n",
-    "- We will use the ReLU (rectified linear unit) activation function, which simply outputs 0 if the input is less or equal than zero, and the output is equal to the input for all other values.\n",
+    "Let's define \"P\" as `P = W X`, so kind of how we defined \"T\" for our perceptron. This will model the hidden layer, but we are now going to add a bit more complexity. We will apply a component-wise function \"sigma\" to `P` to get `S`, so $P=WX$ and $S = sigma(P)$ \n",
+    "\n",
+    "We will call this \"sigma\" function an \"activation function\". This will helps us to model complex non-linear relationships and interaction effects. We will use the sigmoid activation function, which given an input \"z\" is defined as:\n",
+    "$$\n",
+    "\\sigma(z) = \\frac{1}{1 + e^{-z}}\n",
+    "\n",
+    "$$\n",
+    "After applying sigma, its output will become the input for the next layer, which in our case will be just the output layer.\n",
+    "$$ S = sigma(WX) $$\n",
+    "\n",
+    "We could also apply another activation function to the output layer, but for simplicity won't. \n",
+    "\n",
+    "\n",
     "## Output Matrix and Error Calculation\n",
-    "- **Output Computation**: `Y = ¯W σ(W X)` where `¯W` is another weight matrix.\n",
-    "- **Objective**: Make `Y` as close to the target `T` as possible.\n",
-    "- **Error Calculation**: Use Hebbian learning to adjust `W` and `¯W` based on the error `E(W, ¯W) = tk - yk`.\n",
-    "- **Error Function**: `E(W, ¯W) = ∑||tk - yk||^2`, summing the squared norms of individual errors.\n",
     "\n",
-    "## Conclusion\n",
-    "- **Role of Hidden Layers**: They significantly enhance the modeling capability of neural networks.\n",
-    "- **Adaptive Learning**: Continuously evolves the model based on new data.\n",
-    "- **Training Method**: Hebbian learning emphasizes incremental updates based on supervised data.\n",
-    "- **Challenge**: Minimizing the error function involves complex optimization, beyond traditional derivative methods.\n",
+    "Finally, our output matrix could be defined as our perceptron last time:\n",
+    "$$\n",
+    "Y = WX\n",
+    "$$\n",
     "\n",
+    "But now the input matrix X is actually the output of the hidden layer, and given that both layers have different weight matrixes let's add a subscript to each to differentiate them (\"o\" for output and \"h\" for hidden), so:\n",
+    "\n",
+    "$$\n",
+    "Y = W_o * sigma(W_h * X)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Like last time, we will try to make the predicted labels to be as close as posible to the real labels. We will now introduce an error function, that will be defined as:\n",
+    "\n",
+    "$$E(W_h, W_o) = \\sum ||t_k - y_k||^2$$\n",
+    "\n",
+    "Where t is a label and y a prediction.\n",
     "\n",
     "\n"
    ]
