WIP on main: 1e2b5a0 neural network

--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -194,13 +194,13 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "print(\"Original image shape:\",images[0].shape) # (28, 28)\n",
+    "print(\"Original image shape:\", images[0].shape)  # (28, 28)\n",
     "\n",
-    "print(\"Flattened image shape: \",images[0].flatten().shape)\n",
+    "print(\"Flattened image shape: \", images[0].flatten().shape)\n",
     "\n",
     "X = np.array([image.flatten() for image in images])\n",
-    "X = X.T # transpose so that each column is an image vector\n",
-    "print(\"X shape:\",X.shape) # (784,1000)\n"
+    "X = X.T  # transpose so that each column is an image vector\n",
+    "print(\"X shape:\", X.shape)  # (784,1000)"
    ]
   },
   {
@@ -229,8 +229,8 @@
     "T = np.zeros((len(labels), 10))\n",
     "for i, label in enumerate(labels):\n",
     "    T[i, label] = 1\n",
-    "T = T.T # transpose so that each column is a label vector\n",
-    "print(\"T shape:\",T.shape) # (10,1000)\n"
+    "T = T.T  # transpose so that each column is a label vector\n",
+    "print(\"T shape:\", T.shape)  # (10,1000)"
    ]
   },
   {
@@ -259,17 +259,19 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, T_train, T_test = train_test_split(X.T, T.T, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, T_train, T_test = train_test_split(\n",
+    "    X.T, T.T, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "X_train = X_train.T\n",
     "X_test = X_test.T\n",
     "T_train = T_train.T\n",
     "T_test = T_test.T\n",
     "\n",
-    "print(\"X_train shape:\",X_train.shape) # (784,800)\n",
-    "print(\"X_test shape:\",X_test.shape) # (784,200)\n",
-    "print(\"T_train shape:\",T_train.shape) # (10,800)\n",
-    "print(\"T_test shape:\",T_test.shape) # (10,200)\n"
+    "print(\"X_train shape:\", X_train.shape)  # (784,800)\n",
+    "print(\"X_test shape:\", X_test.shape)  # (784,200)\n",
+    "print(\"T_train shape:\", T_train.shape)  # (10,800)\n",
+    "print(\"T_test shape:\", T_test.shape)  # (10,200)"
    ]
   },
   {
@@ -345,13 +347,13 @@
     }
    ],
    "source": [
-    "\n",
     "def compute_pseudoinverse(X):\n",
     "    \"\"\"\n",
     "    Computes the pseudoinverse of matrix X.\n",
     "    \"\"\"\n",
-    "    X_pinv = np.linalg.pinv(X) # For simplicity let's just use numpy's pinv function\n",
+    "    X_pinv = np.linalg.pinv(X)  # For simplicity let's just use numpy's pinv function\n",
     "    return X_pinv\n",
+    "\n",
     "\n",
     "def train_perceptron(X, T):\n",
     "    \"\"\"\n",
@@ -361,11 +363,13 @@
     "    W_hat = np.dot(T, X_pinv)\n",
     "    return W_hat\n",
     "\n",
+    "\n",
     "def predict(X, W):\n",
     "    \"\"\"\n",
     "    Uses the trained perceptron to predict outputs.\n",
     "    \"\"\"\n",
     "    return np.dot(W, X)\n",
+    "\n",
     "\n",
     "print(\"X train shape:\", X_train.shape)\n",
     "print(\"T train shape:\", T_train.shape)\n",
@@ -386,7 +390,7 @@
     "\n",
     "predictions = predict(new_X, W_hat)\n",
     "\n",
-    "print(\"Predictions:\", predictions)\n"
+    "print(\"Predictions:\", predictions)"
    ]
   },
   {
@@ -440,9 +444,9 @@
     "print(\"y_true:\", y_true)\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_true, y_pred))\n",
-    "print(\"Precision:\", precision_score(y_true, y_pred, average='macro'))\n",
-    "print(\"Recall:\", recall_score(y_true, y_pred, average='macro'))\n",
-    "print(\"F1 score:\", f1_score(y_true, y_pred, average='macro'))\n"
+    "print(\"Precision:\", precision_score(y_true, y_pred, average=\"macro\"))\n",
+    "print(\"Recall:\", recall_score(y_true, y_pred, average=\"macro\"))\n",
+    "print(\"F1 score:\", f1_score(y_true, y_pred, average=\"macro\"))"
    ]
   },
   {
@@ -502,13 +506,73 @@
     "\n",
     "Where t is a label and y a prediction.\n",
     "\n",
-    "\n"
+    "## Error optimization via Gradient Descent\n",
+    "\n",
+    "Our final piece of the puzzle is a way to minimize the error function we just introduced. For that, we are going to use something called \"Gradient descent\". After each iteration of updating W, we evaluate our error function and we ask \"where do we go from here to minimize our error?\". For that, we calculate the gradient of the error function at that specific point, which will give us a set of vectors (each one corresponding to a dimension of our hidden layer) that point us in the direction of the greatest change (actually in the direction of the function greatest *increase*, so we must take the exact **opposite** direction!). \n",
+    "\n",
+    "We will take advantage of numpy using its *gradient* method, which according to numpy's documentation outputs \"*A list of ndarrays (or a single ndarray if there is only one dimension) corresponding to the derivatives of f with respect to each dimension. Each derivative has the same shape as f.*\" (in our case f is the error function). \n",
+    "\n",
+    "## Learning rate parameter\n",
+    "\n",
+    "Like we mentioned before, we want to make *small nudges* to our W matrix each iteration, so we will scale that set of vectors by $\\alpha$, a scalar we will call a \"learning rate\". This learning rate is a parameter we define, and basically will affect the size of the \"step\" we take towards the error minimization. If we take big steps, we risk not finding a global optima, and if we take small steps we risk taking a long time to find the optima. \n",
+    "\n",
+    "## Error optimization formula\n",
+    "\n",
+    "So we finally arrive at our formula to update our W matrix. It simply is:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "W_{new} = W_{old} - \\alpha Gradient\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "So like we said, we take an \"alpha\" size step in the opposite direction of the gradient.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coding our final implementation\n",
+    "\n",
+    "We now have to implement the following:\n",
+    "- Code our activation function (sigmoid)\n",
+    "- Initialize W and b for the hidden and output layers, so we will set them to some random (small) value. \n",
+    "- Set our $\\alpha$ parameter\n",
+    "- Code our gradient function (we will just use numpy *gradient*)\n",
+    "- Evaluate the error function for a specific point\n",
+    "\n",
+    "And most important of all, we must put everything together in our optimization function, which will:\n",
+    "1. Take as input the current W matrix, X_train, T_train, alpha, and desired number of iterations\n",
+    "1. Bar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.01  # learning rate\n",
+    "\n",
+    "\n",
+    "\n",
+    "def sigmoid(z):\n",
+    "    \"\"\"\n",
+    "    Computes the sigmoid function.\n",
+    "    \"\"\"\n",
+    "    return 1 / (1 + np.exp(-z))"
+   ]
   }
  ],
  "metadata": {
